<resources>
    <string name="app_name">Basic Phrases</string>
    <string name="app_title">Learn basic phrases in Spanish!</string>
    <string name="do_you_speak_english">Do you \nspeak English?</string>
    <string name="good_evening">Good evening</string>
    <string name="hello">hello</string>
    <string name="how_are_you">How are you?</string>
    <string name="i_live_in">I am from...</string>
    <string name="my_name_is">My name is...</string>
    <string name="please">please</string>
    <string name="welcome">welcome</string>
</resources>
